--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ PROJECT(rmu)
 
 cmake_minimum_required(VERSION 2.6)
 #set(CMAKE_C_COMPILER /home/julyrain/toolschain/arm-2008q1/bin/arm-linux-gcc)
-#set(CMAKE_C_COMPILER arm-linux-gcc)
-set(CMAKE_C_COMPILER arm-linux-g++)
+set(CMAKE_C_COMPILER arm-linux-gcc)
+#set(CMAKE_C_COMPILER arm-linux-g++)
+#set(CMAKE_C_COMPILER arm-none-linux-gnueabi-gcc)
 #设置交叉编译工具
 set(CMAKE_C_COMPILER gcc)
 #可执行程序存放路径
